[package]
name = "shared-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", default-features = false }
tabled = "0.15.0"
# burn = { version = "0.13.2", features = ["train", "wgpu"] }
# burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "autodiff", "wgpu", "fusion"] }
burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "autodiff", "fusion", "candle-cuda"] }
# or maybe could use "train" and "sqlite_bundled" features instead of "autodiff" if I ever need dataset feature

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
serde = { version = "1.0.203", features = ["derive"] }
